Fix: Import paths,repair instantiation, repair MC likelihood, verified optimization pipeline

--- a/mHMM/notebooks/00_setup.ipynb
+++ b/mHMM/notebooks/00_setup.ipynb
@@ -116,9 +116,9 @@
       "📁 Checking folder structure in: /Users/user/Documents/Projects/Markov-Models/mHMM\n",
       "Folder exists: models\n",
       "Folder exists: models/stan\n",
-      " Created missing folder: data\n",
-      " Created missing folder: data/simulated\n",
-      " Created missing folder: data/results\n"
+      "Folder exists: data\n",
+      "Folder exists: data/simulated\n",
+      "Folder exists: data/results\n"
      ]
     }
    ],
