--- a/mHMM/notebooks/04_SSE.ipynb
+++ b/mHMM/notebooks/04_SSE.ipynb
@@ -284,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "385c36c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,6 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1692aaa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d6a2f7b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mhmm_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
